--- a/style.css
+++ b/style.css
@@ -41,7 +41,10 @@
     color: var(--primaryColor);
     font-size: 28px;
     font-weight: 600;
- 
+    position: relative;
+}
+.menu{
+    display: none;
 }
 .nav-list{
     display: flex;
@@ -62,11 +65,11 @@
     color: var(--primaryColor);
 }
 
-/* HERO SECTION */
 .main{
     width: 80%;
     margin: 0 auto;
 }
+/* HERO SECTION */
 #hero-section{
     width: 100%;
     height: calc(100vh );
@@ -228,9 +231,8 @@
 
 .skills{
     display: flex;
-    flex-wrap: nowrap;
-    gap: 17px;
-    
+    flex-wrap: wrap;
+    gap: 17px;  
 }
 .skill{
     width: 256px;
@@ -338,6 +340,8 @@
 .featured-project-card{
     display: flex;
     column-gap: 17px;
+    row-gap: 28px;
+    flex-wrap: wrap;
 }
 .project-card{
     width: 343px;
@@ -402,9 +406,6 @@
     gap: 193px;
     padding-bottom: 64px;
 }
-
-
-
 .contact-left h1{
     font-weight: 600;
     font-size: 32px;
@@ -507,4 +508,124 @@
 }
 .footer-social ul li a:hover{
    color: #fff;
+}
+
+/* MEDIA QUERIES */
+@media (max-width: 575.98px) {
+
+    #hero-section{
+        display: flex;
+        justify-content: center;
+    }
+    #hero-section::after{
+        display: none;
+    }
+    .hero-right-content img{
+        display: none;
+    }
+  
+    .contact-right button{
+        width: 100%;
+        height: 50px;
+    }
+    .contact-right input[type = 'text']{
+        width: 100%;
+    }
+
+    .contact-right input::placeholder{
+        font-weight: 500;
+        font-size: 16px;
+        color: #f5f5f5f5;
+        opacity: .5;
+    }
+
+     .hero-right::before{
+       display: none;
+    }
+
+    .hero-left{
+        top: 0;
+    }
+
+}
+
+@media (max-width: 767.98px) {
+ 
+    .nav-list{
+            display: none;
+        }
+    .main-nav{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 0 160px;
+    }
+    .logo{
+        color: var(--primaryColor);
+        font-size: 18px;
+        font-weight: 600;
+    }
+    
+    .hero-right::before{
+        left: -100px;
+        top: 0;
+        width: 100%;
+    }
+       
+       .featured-project-card{
+        display: flex;  
+        justify-content: center;
+        align-items: center;
+    }
+    .services{
+        display: flex;  
+        justify-content: center;
+        align-items: center;
+    }
+    .skills{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .menu{
+        display: block;
+        position: absolute;
+        left: -100px;
+        top: 30px;
+    }
+    .hero-right-content img{
+        width: 300px;
+        height: 388px;
+    }
+    .hero-right::before{
+        content: '';
+        width: 386px;
+        height: 386px;
+        top: 0px;
+        left: -17px;
+    }
+    .hero-left{
+        top: -10%;
+    }
+
+
+}
+
+@media (max-width: 991.98px) {
+    #hero-section{
+        display: flex;
+        flex-direction: column-reverse;
+        justify-content: center;
+        align-items: center;
+    }
+    .hero-right{
+        top: -100px;
+        left: 0;
+    }
+    #contact{
+
+        display: flex;
+        flex-direction: column;
+
+    }
 }
