--- a/style.css
+++ b/style.css
@@ -36,12 +36,14 @@
     justify-content: space-between;
     align-items: center;
     padding: 0 160px;
+    position: relative;
+    z-index: 1;
 }
 .logo{
     color: var(--primaryColor);
     font-size: 28px;
     font-weight: 600;
-    position: relative;
+
 }
 .menu{
     display: none;
@@ -57,7 +59,7 @@
     color: #ffff;
     font-weight: 600;
     font-size: 18px;
-
+    transition: .50s ease;
 }
 .nav-link a:hover,
 .nav-link a:focus{
@@ -78,7 +80,6 @@
     grid-template-rows: repeat(4, 1fr);
     place-items: center;
     justify-content: center;
-  
 }
 
 #hero-section::after{
@@ -119,7 +120,6 @@
     display: flex;
     gap: 32px;
     margin-top: 29px;
-    
 }
 .cta-about a{
     display: flex;
@@ -130,6 +130,7 @@
     width: 160px;
     height: 48px;
     border-radius: 8px;
+    gap: 8px;
     transition: all .25s ease;
 }
 
@@ -256,7 +257,7 @@
 }
 
 .about-icons i{
-    font-size: 32px;
+    font-size: 64px;
     font-weight: 600;
 }
 
@@ -357,7 +358,19 @@
     background: linear-gradient(180deg, rgba(24, 24, 36, 0.25) 0%, rgba(117, 98, 224, 0.5) 100%);
     background-blend-mode: multiply;
     border-radius: 8px;
+    overflow: hidden;
 }
+.thumbnail img{
+        width: 311px;
+        height: 173px;
+        opacity: .5;
+        transition: all .50s ease;
+        object-fit: cover;
+    }
+.thumbnail img:hover{
+        transform: scale(1.2);
+        opacity: 1;
+    }
 .description h1{
     color: var(--primaryColor);
     padding: 16px 0 5px 0;
@@ -481,49 +494,187 @@
 }
 
 /* FOOTER */
+.footer{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 32px 0;
+    background-color: var(--navBg);
+    margin-top: 256px;
+}
+.footer-menu ul{
+    display: flex;
+    flex-direction: column;
+    list-style: none;
+    align-items: flex-start;
+    justify-content: center;
+    gap: 16px;
+}
 
+.footer-menu ul li a{
+    font-weight: 500;
+    text-transform: uppercase;
+    color: var(--primaryColor);
+    text-decoration: none;
+}
 .footer-text{
     display:  flex;
-    justify-content: space-evenly;
-    align-items: center;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    flex-direction: column;
 }
-.footer-text p{
-    font-weight: 500;
-    font-size: 16px;
+.texts{
+   text-align: center;
+   margin-bottom: 16px;
+}
+.texts p{
+    font-weight: 600;
+    font-size: 18px;
     color: #FFFFFF;
-    opacity: 0.5;
+}
+.texts h1{
+   color:var(--primaryColor);
+}
+.emai-contactnum p{
+    color: #ffff;
+}
+.emai-contactnum span{
+    font-weight: 500;
+    text-transform: uppercase;
+    margin-right: 3px;
+}
+
+.footer-social h1{
+    font-weight: 600;
+    font-size: 32px;
+    color: #7562E0;
+}
+.footer-social p{
+    font-weight: 500;
+    font-size: 18px;
+    color: #ffff;
+    margin-top: 16px;
+    margin-bottom: 28px;
 }
 .footer-social ul{
-    display:  flex;
+    display: flex;
+    gap: 21px;
     list-style: none;
-    padding-left: 120px;
-    padding-top: 17px;
-    padding-bottom: 34px;
-    gap: 20px;
-
 }
 .footer-social ul li a{
-   color: #7562E0;
-   font-size: 24px;
+    font-size: 32px;
+    color: #7562E0;
+    transition: all .25s ease;
 }
-.footer-social ul li a:hover{
-   color: #fff;
+.footer ul li a:hover{
+    color: #fff;
 }
-
 /* MEDIA QUERIES */
-@media (max-width: 575.98px) {
+@media screen and (max-width: 568.98px ){
 
     #hero-section{
         display: flex;
         justify-content: center;
     }
-    #hero-section::after{
+    /* #hero-section::after{
         display: none;
+    } */
+
+    .hero-left{
+        padding-left: 32px;
     }
+
     .hero-right-content img{
         display: none;
     }
   
+
+     .hero-right::before{
+       display: none;
+    }
+
+    .hero-left{
+       top: -50px !important;
+    }
+
+    .hero-left-content span{
+        font-size: 32px !important;
+    }
+
+    .hero-left-content h1{
+        font-size: 52px !important;
+    }
+
+    .hero-left-content p{
+        font-size: 18px !important;
+    }
+  
+    .cta-about a, .cta-project a{
+        width: 130px;
+        height: 38px;
+        font-size: 32px;
+    }
+
+    /* ABOUT */
+    
+    .about-me .exp p:nth-child(1){
+        font-size: 64px;
+    }
+    .about-me .exp p:nth-child(2){
+        font-weight: 500;
+        font-size: 18px;
+    }
+
+    /* FEATURED PROJ */
+    .featured-project-card{
+     padding: 0 32px;
+    }
+
+    .project-card{
+        width: 325px;
+        height: 370px;
+    }
+
+    .thumbnail{
+        width: 291px;
+        height: 143px;
+    }
+
+    .description h1{
+        font-size: 22px;
+    }
+    .description p{
+        font-weight: 500;
+        font-size: 16px;
+    }
+    .project-card-btn{
+        margin-top: 24;
+        display: flex;
+        gap: 18px;
+    }
+    .project-card-btn a{
+        font-size: 16px;
+    }
+    .project-card-btn a:hover{
+        transform: scale(1.1);
+    }
+    .project-card-btn a:nth-child(1){
+        width: 145px;
+        height: 43px;
+        background: #7562E0;
+        border-radius: 8px;
+        line-height: 43px;
+    }
+    .project-card-btn a:nth-child(2){
+        width: 145px;
+        height: 43px;
+        border: 3px solid #7562E0;
+        border-radius: 8px;
+        line-height: 37px;
+    }
+
+    /* CONTACTS */
+
     .contact-right button{
         width: 100%;
         height: 50px;
@@ -539,17 +690,10 @@
         opacity: .5;
     }
 
-     .hero-right::before{
-       display: none;
-    }
-
-    .hero-left{
-        top: 0;
-    }
-
 }
 
-@media (max-width: 767.98px) {
+
+@media screen and (max-width: 767.98px) {
  
     .nav-list{
             display: none;
@@ -565,18 +709,45 @@
         font-size: 18px;
         font-weight: 600;
     }
+    .menu{
+        display: block;
+        position: absolute;
+        left: 32px;
+        top: 30px;
+        color: #7562E0;
+        font-weight: 600;
+        font-size: 20px;
+    }
     
-    .hero-right::before{
-        left: -100px;
-        top: 0;
-        width: 100%;
+    .hero-right{
+        top: -150px !important;
+        left: 0;
     }
-       
-       .featured-project-card{
-        display: flex;  
-        justify-content: center;
-        align-items: center;
+
+    .hero-left{
+        top: -20%;
     }
+    
+    .hero-left-content span{
+        font-size: 24px;
+    }
+
+    .hero-left-content h1{
+        font-size: 42px;
+    }
+
+    .hero-left-content p{
+        font-size: 16px;
+    }
+  
+    .cta-about a, .cta-project a{
+        width: 130px;
+        height: 38px;
+        font-size: 14px;
+    }
+
+
+    /* ABOUT */
     .services{
         display: flex;  
         justify-content: center;
@@ -587,11 +758,27 @@
         justify-content: center;
         align-items: center;
     }
-    .menu{
-        display: block;
-        position: absolute;
-        left: -100px;
-        top: 30px;
+    .featured-project-card{
+        display: flex;  
+        justify-content: center;
+        align-items: center;
+    }
+    
+}
+
+@media (max-width: 991.98px) {
+    #hero-section{
+        display: flex;
+        flex-direction: column-reverse;
+        justify-content: center;
+        align-items: center;
+    }
+    .hero-right{
+        top: -150px;
+        left: 0;
+    }
+    .hero-left{
+        top: -120px;
     }
     .hero-right-content img{
         width: 300px;
@@ -604,24 +791,24 @@
         top: 0px;
         left: -17px;
     }
-    .hero-left{
-        top: -10%;
+        .hero-left-content span{
+        font-size: 24px;
     }
 
-
-}
-
-@media (max-width: 991.98px) {
-    #hero-section{
-        display: flex;
-        flex-direction: column-reverse;
-        justify-content: center;
-        align-items: center;
+    .hero-left-content h1{
+        font-size: 42px;
     }
-    .hero-right{
-        top: -100px;
-        left: 0;
+
+    .hero-left-content p{
+        font-size: 16px;
     }
+  
+    .cta-about a, .cta-project a{
+        width: 130px;
+        height: 38px;
+        font-size: 14px;
+    }
+
     #contact{
 
         display: flex;
