--- a/style.css
+++ b/style.css
@@ -501,6 +501,7 @@
     padding: 32px 0;
     background-color: var(--navBg);
     margin-top: 256px;
+    flex-wrap: wrap;
 }
 .footer-menu ul{
     display: flex;
@@ -512,7 +513,7 @@
 }
 
 .footer-menu ul li a{
-    font-weight: 500;
+    font-weight: 600;
     text-transform: uppercase;
     color: var(--primaryColor);
     text-decoration: none;
@@ -764,6 +765,23 @@
         align-items: center;
     }
     
+    .footer{
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        flex-direction:column-reverse;
+        gap: 32px;
+    }
+
+    .footer-menu ul{
+        display: flex;
+        flex-direction: row;
+        list-style: none;
+        align-items: center;
+        justify-content: center;
+        flex-wrap: wrap;
+        gap: 16px;
+    }
 }
 
 @media (max-width: 991.98px) {
